# engram-python-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/engram/: __init__.py  _base_client.py  _http.py  _models.py  _serialization.py  async_client.py  client.py  errors.py  types.py
src/engram/_models/: __init__.py  memory.py  run.py
src/engram/_resources/: __init__.py  memories.py  runs.py
src/engram/_serialization/: __init__.py  _builders.py  _parsers.py
tests/: test_client_async.py  test_client_sync.py  test_imports.py  test_serialization.py
